Suppress `this-escape` warning in JDK >= 21